# composite_llm_research

./: .gitignore  CLI_STRATEGY.md  CLI_STRATEGY_OUT_OF_SCOPE.md  DESIGN.md  GPT51_DESIGN.md  IMPLEMENTATION_PROPOSAL.md  OPUS45_DESIGN.md  PROXY_USAGE.md  README.md  TECH.md  dashboard.py  demo.py  litellm_proxy.example.yaml  llm_logs.jsonl  pyproject.toml  sample.env
composite_llm/: __init__.py  config_schema.py  litellm_provider.py  moa_config.py  observability.py  provider.py  proxy_bootstrap.py  proxy_local.py  trace.py
composite_llm/strategies/: base.py  chain_of_thought.py  composer_cli.py  council.py  moa.py  think.py  think_tool.py
scripts/: demo.py  demo_proxy.py  run_proxy_from_env.sh  test_proxy_composer_cli.py
tests/: conftest.py  fake_openai_server.py  test_council_integration.py  test_fake_openai_server.py  test_moa_integration.py  test_profiles.py  test_tool_call_flow.py
