[project]
name = "composite-llm"
version = "0.1.0"
description = "Composite LLM Strategies"
dependencies = [
    "litellm>=1.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["composite_llm"]

